Fixed firefox record layout bug

--- a/ckanext/nhm/theme/fanstatic/css/nhm.css
+++ b/ckanext/nhm/theme/fanstatic/css/nhm.css
@@ -1116,6 +1116,9 @@ i.mineralogy {
 
   display: block;
 }
+.record-content table tbody table#determinations {
+  margin: 0;
+}
 .toggle-empty-rows {
   float: right;
   margin: -10px 0 0 0;
